Поправлены косяки в формулах.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -285,7 +285,7 @@
 В работе \cite{palmer2009analysis} предложено силу формируемую разностью давлений представлять следующим образом:
 \begin{equation}
     \label{eq:thrust_tunnel}
-	T_S = T_T \exp \left[ -c \left( \frac{u}{u_j}^2 \right) \right]
+	T_S = T_T (1 - \exp \left[ -c \left( \frac{u}{u_j}^2 \right) \right])
 \end{equation}
 \noindent где:
 \begin{itemize}
@@ -293,13 +293,14 @@
 	\item $T_T$ -- упор создаваемый подруливающим движителем;
 	\item $u$ -- скорость набегающего потока;
 	\item $u_j$ -- скорость пропульстивной струи;
-	\item $c$ -- некоторый коэффициент.
+	\item $c$ -- коэффициент подавления упора.
 \end{itemize}
 
 В свою очередь скорость пропульсивной струи, создаваемой работой подруливающего движителя может быть определена следующим уравнением:
-\begin{equation*}
+\begin{equation}
+    \label{eq:jetflow_speed}
 	u_j = \sqrt{\frac{T_T}{\rho A}}
-\end{equation*}
+\end{equation}
 \noindent где $\rho$ -- плотность воды, $A=\pi R^2$, где $R$ -- диаметр гребного винта подруливающего движителя.
 
 Момент действующий на ПА формируемый упором движителя и гидродинамической силой определяется следующим образом:
