--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -53,7 +53,7 @@
 \begin{itemize}
     \item $q(\vect{x}) \geq 0, R_{\nu}(\vect{x}) = R_{\nu}^T(\vect{x}) \geq 0$ -- некоторые коэффициенты оптимизации;
     \item $s$ -- невязку вектора виртуального управления, которая определяет меру различия между заданным и сформированным вектором управления;
-    \item $Q$ -- матрица, формализующая приоритеты работы тех или иных осей управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
+    \item $Q_s$ -- матрица, формализующая приоритеты работы тех или иных осей управления при выходе вектора $\nu$ за пределы допустимого множества $\mathspace{A}$.
     \item $J(\vect{x}, \vect{u}, t)$ -- некоторый функционал качества.
 \end{itemize}
 
