существенно пераработана часть касающаяся метода адаптивного распределения.

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -26,6 +26,8 @@
 		\textbf{РУ} &: Рулевое устройство \\
 
 		\textbf{ГДХ} &: Гидродинамические характеристики \\
+
+		\textbf{СУ} &: Система управления \\
     \end{tabular}
 \end{table*}
 
