--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -7,5 +7,28 @@
   year={2020},
   publisher={Федеральное государственное автономное образовательное учреждение высшего~…},
   language = {russian},
-  authorconf = {true},
+  authorvak = {true}
+}
+
+@inproceedings{kostenko2021comparative,
+  addendum = {(0,10~п.~л.; Scopus)},
+  title={A comparative analysis of control allocation methods applied to autonomous underwater vehicles},
+  author={Kostenko, VV and Tolstonogov, A Yu},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1864},
+  number={1},
+  pages={012145},
+  year={2021},
+  organization={IOP Publishing},
+  language = {english},
+  authorconf = {true}
+}
+
+@inproceedings{костенко2020анализ,
+  title={Анализ различных подходов к распределению управляющих воздействий подводного аппарата},
+  author={Костенко, ВВ and Толстоногов, АЮ},
+  booktitle={Материалы конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). СПб.: АО {\guillemotleft}Кон-церн {\guillemotleft}ЦНИИ {\guillemotleft}Электроприбор{\guillemotright}, 2020. 200 с. В настоящий сборник вошли тексты докладов, состоявшихся на конференции {\guillemotleft}Управление в морских системах{\guillemotright}(УМС-2020). Тексты публикуются в авторской редакции.},
+  pages={64},
+  language = {russian},
+  authorconf = {true}
 }
