--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -1122,3 +1122,75 @@
   publisher={CRC Press},
   language={english}
 }
+
+@book{luenberger1984linear,
+  title={Linear and nonlinear programming},
+  author={Luenberger, David G and Ye, Yinyu and others},
+  volume={2},
+  year={1984},
+  publisher={Springer},
+  language={english}
+}
+
+@article{lu1996constrained,
+  title={Constrained tracking control of nonlinear systems},
+  author={Lu, Ping},
+  journal={Systems \& control letters},
+  volume={27},
+  number={5},
+  pages={305--314},
+  year={1996},
+  publisher={Elsevier},
+  language={english}
+}
+
+@article{борейко2019система,
+  title={Система управления АНПА большой автономности на базе мультиагентного подхода},
+  author={Борейко, АА and Инзарцев, АВ and Машошин, АИ and Павин, АМ and Пашкевич, ИВ},
+  journal={Подводные исследования и робототехника},
+  number={2},
+  pages={23--31},
+  year={2019},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language={russian} 
+}
+
+@article{инзарцев2015реконфигурируемая,
+  title={Реконфигурируемая кроссплатформенная среда моделирования поведения необитаемого подводного аппарата},
+  author={Инзарцев, Александр Вячеславович and Павин, АМ and Елисеенко, ГД and Родькин, ДН and Сидоренко, АВ and Лебедко, ОА and Панин, МА},
+  journal={Подводные исследования и робототехника},
+  number={2},
+  pages={28--34},
+  year={2015},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language={russian} 
+}
+
+@inproceedings{pavin2016reconfigurable,
+  title={Reconfigurable distributed software platform for a group of uuvs (yet another robot platform)},
+  author={Pavin, Alexander and Inzartsev, Alexander and Eliseenko, Grigory},
+  booktitle={OCEANS 2016 MTS/IEEE Monterey},
+  pages={1--7},
+  year={2016},
+  organization={IEEE},
+  language={english}
+}
+
+@article{борейко2019малогабаритный,
+  title={Малогабаритный многофункциональный автономный необитаемый подводный аппарат ``Х300''},
+  author={Борейко, АА and Кушнерик, АА and Михайлов, ДН and Павин, АМ and Щербатюк, АФ},
+  journal={Технические проблемы освоения Мирового океана},
+  number={8},
+  pages={33--37},
+  year={2019},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language={russian}
+}
+
+@book{fossen2011handbook,
+  title={Handbook of marine craft hydrodynamics and motion control},
+  author={Fossen, Thor I},
+  year={2011},
+  publisher={John Wiley \& Sons},
+  language={english}
+}
