Доработана четвертая глава до вменяемого состояния.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -488,16 +488,16 @@
 
 \section{Анализ эффективности адаптивного метода управления ДРК}
 В рамках исследования был проведён численный анализ эффективности представленного адаптивного метода управления ДРК на базе модели ДРК АНПА ``ММТ-300''\cite{борейко2019малогабаритный}.
-Было проведено статическое сравнительное исследование метода по сравнению с набором аналогичных методов управления.
+Было проведено сравнительное исследование работы предлагаемого метода по сравнению с набором аналогичных методов управления в случае отсутствия набегающего потока (раздел \ref{sec:Allocation/StaticTest}).
 Кроме этого было проведено сравнение поведения адаптивного метода при различных вариациях скорости (раздел \ref{sec:Allocation/SpeedTest}).
-Описание модели ДРК АНПА ``ММТ-300'' (ранее ``X-300'') представлено в разделе \ref{ssec:Allocation/PropulsionDescription}.
+Описание модели ДРК АНПА ``ММТ-300'' (ранее ``X-300'') на которой все результаты были получены представлено в разделе \ref{ssec:Allocation/PropulsionDescription}.
 
 \subsection{Описание модели ДРК}\label{ssec:Allocation/PropulsionDescription}
 ``ММТ-300'' -- автономный необитаемый подводный аппарат, который спроектирован и разработан в Институте проблем морских технологий ДВО РАН.
 Он предназначен для проведения подводных работ на глубинах до 300 метров.
 
 АНПА оснащен четырьмя симметрично расположеными относительно продольной оси ПА маршевыми движителями. 
-Они расположены в корме аппарата с углом наклона относительно продольной оси ПА $\alpha$.
+Они установлены в корме аппарата с углом наклона относительно продольной оси ПА $\alpha$.
 Для возможности управления при малых скоростях (в диапазоне скоростей 0 - 1.0 м/с) он дополнительно оборудован двумя подруливающими движителями в носовой части аппарата -- одним вертикальным и одним горизонтальным.
 
 Переменные $L_s^x, L_s^y, L_s^z$ определяют, соответственно, проекцию расстояния от точки крепления кормовых движителей до ЦМ ПА на продольную, поперечную и нормальную оси.
@@ -529,10 +529,10 @@
         Наименование & Величина \\ 
         \midrule
         $\alpha$ & 22.5$^{\circ}$ \\
-        $l_s^x$ & 1.60 м \\
-        $l_s^y$ & 0.14 м \\
-        $l_{tv}$ & 0.3 м \\
-        $l_{th}$ & 1.0 м \\
+        $L_s^x$ & 1.60 м \\
+        $L_s^y$ & 0.14 м \\
+        $L_{tv}$ & 0.3 м \\
+        $L_{th}$ & 1.0 м \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -548,15 +548,15 @@
         \midrule
         \multicolumn{3}{c}{Маршевые движители} \\
         \midrule
-        Нижний  & (0, -$\alpha$) & (-$l_s^x$,0,$l_s^y$) \\
-        Верхний & (0, $\alpha$)  & (-$l_s^x$,0,-$l_s^y$) \\
-        Левый   & (-$\alpha$, 0) & (-$l_s^x$,-$l_s^y$,0) \\
-        Правый  & ($\alpha$, 0)  & (-$l_s^x$,$l_s^y$,0) \\
+        Нижний  & (0, -$\alpha$) & (-$L_s^x$,0,$L_s^y$) \\
+        Верхний & (0, $\alpha$)  & (-$L_s^x$,0,-$L_s^y$) \\
+        Левый   & (-$\alpha$, 0) & (-$L_s^x$,-$L_s^y$,0) \\
+        Правый  & ($\alpha$, 0)  & (-$L_s^x$,$L_s^y$,0) \\
         \midrule
         \multicolumn{3}{c}{Подруливающие движители} \\
         \midrule
-        Вертикальный    & (0, 90) & ($l_{tv}$,0,0) \\
-        Горизонтальный & (90, 0) & ($l_{th}$,0,0) \\
+        Вертикальный    & (0, 90) & ($L_{tv}$,0,0) \\
+        Горизонтальный & (90, 0) & ($L_{th}$,0,0) \\
         \bottomrule
     \end{tabular}
 \end{table}
@@ -580,7 +580,7 @@
         \cos{\alpha} \\
         0 \\
         -\sin{\alpha} \\
-        \cos{\alpha} \cdot l_s^y - \sin{\alpha} \cdot l_s^x \\
+        \cos{\alpha} \cdot L_s^y - \sin{\alpha} \cdot L_s^x \\
         0
     \end{pmatrix}
     ;\:
@@ -589,7 +589,7 @@
         \cos{\alpha} \\
         0 \\
         \sin{\alpha} \\
-        -\cos{\alpha} \cdot l_s^y + \sin{\alpha} \cdot l_s^x \\
+        -\cos{\alpha} \cdot L_s^y + \sin{\alpha} \cdot L_s^x \\
         0
     \end{pmatrix}
 \end{equation*}
@@ -601,7 +601,7 @@
         -\sin{\alpha} \\
         0 \\
         0 \\
-        -\cos{\alpha} \cdot l_s^y - \sin{\alpha} \cdot l_s^x
+        -\cos{\alpha} \cdot L_s^y - \sin{\alpha} \cdot L_s^x
     \end{pmatrix}
     ;\:
     b_r = 
@@ -610,7 +610,7 @@
         \sin{\alpha} \\
         0 \\
         0 \\
-        \cos{\alpha} \cdot l_s^y +  \sin{\alpha} \cdot l_s^x
+        \cos{\alpha} \cdot L_s^y +  \sin{\alpha} \cdot L_s^x
     \end{pmatrix}
 \end{equation*}
 
@@ -620,7 +620,7 @@
         0 \\
         0 \\
         1 \\
-        -l_{tv} \\
+        -L_{tv} \\
         0
     \end{pmatrix}
     ;\:
@@ -630,13 +630,18 @@
         1 \\
         0 \\
         0 \\
-        l_{th} \\
+        L_{th} \\
     \end{pmatrix}
 \end{equation*}
 
-\begin{noteplan}
-    Добавить швартовую характеристику движителя
-\end{noteplan}
+Швартовная характеристика движителей АНПА ``ММТ-300'' представлена на рисунке \ref{fig:mmt-300-bollard-pull}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/MMT-300 - Швартовая характеристика.png}
+    \caption{Швартовная характеристика движителей АНПА ``ММТ-300''.}
+    \label{fig:mmt-300-bollard-pull}
+\end{figure}
 
 \subsection{Статический сравнительный анализ работы адаптивного метода} \label{sec:Allocation/StaticTest}
 Для статического сравнительного анализа работы адаптивного метода был проведен анализ результатов решения задачи управления ДРК ПА для случайного вектора целевого управления движением ПА $\vect{v_r}$ \cite{kostenko2021comparative, костенко2020анализ}.
@@ -654,7 +659,7 @@
 Пусть $(\vect{u}^l_1, \vect{u}^l_2, \ldots, \vect{u}^l_k)$ -- множество векторов управления ДРК полученых полным перебором где $u^l_i$ принимают значения $\underline{u_i}$  либо $\overline{u_i}$.
 Размер множества векторов $k$ будет определен как $2^m$ где $m$ -- количество ИМ в составе ДРК.
 
-Тогда $\vect{\nu^b_i}$ будет получен выражением следующего вида:
+Тогда $\vect{\nu^b_i}$ будет получен следующим выражением:
 \begin{equation*}
     \vect{\nu^b_i} = B\vect{u}^*_i
 \end{equation*}
@@ -663,6 +668,24 @@
 \begin{equation}
     \vect{v}_i = B \vect{u}^l_i  
 \end{equation}
+
+Пример проекции области допустимых значений для метода линейных ограничений и фиксированной точки на оси $T_x-M_y-M_z$ представлен на рисунке \ref{fig:mmt-300-feasible-set-3d}.
+Проекции областей допустимых значений на оси $Tx-My$ для всех методов представлен на рисунке \ref{fig:mmt-300-feasible-set}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/ММТ-300 - область допустимых значений TxMyMz.png}
+    \caption{Проекция области допустимых значений для метода линейных ограничений и фиксированной точки на оси $T_x-M_y-M_z$.}
+    \label{fig:mmt-300-feasible-set-3d}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\linewidth]{allocation/ММТ-300 - область допустимых значений.png}
+    \caption{Проекция области допустимых значений на оси $T_x-M_y$.}
+    \label{fig:mmt-300-feasible-set}
+\end{figure}
+
 
 Для расчёта потребляемой мощности была использована следующая формула \cite{baldini2018constrained}:
 \begin{equation*}
@@ -698,34 +721,34 @@
     Метод & Время работы,~\% & \makecell[l]{Размер  \\ области $\mathspace{A}$,~\%} & \makecell[l]{Потребляемая \\ мощность,~\%} & $||\vect{s}||$,~\% \\
     \midrule
     Фиксированное ограничение  &
-    0 &
-    0 &
-    0 &
-    0,1
+    1,5 &
+    \textbf{0} &
+    2,3 &
+    \textbf{2,6}
     \\ 
     Линейное ограничение &
-    4,6 &
-    68,8 &
-    1,3 & 
-    0,1
+    1,3 &
+    22,1 &
+    2,9 & 
+    2,6
     \\
     Линейная оптимизация&
-    282,4  &
-    162,1  &
-    18,4  &
-    4,6 
+    \textbf{352,5}  &
+    \textbf{83,2}  &
+    \textbf{43,3}  &
+    \textbf{0}
     \\
     Квадратичная оптимизация &
-    4,6  &
-    158,4  &
-    0,6  &
-    0
+    68  &
+    79,3  &
+    2,1  &
+    2,4
     \\
     Адаптивная оптимизация &
-    -  &
-    -  &
-    -  &
-    - 
+    \textbf{0}  &
+    70,2  &
+    \textbf{0}  &
+    1,8 
     \\
     \bottomrule
 \end{tabular}
@@ -734,7 +757,7 @@
 \subsection{Моделирование работы адаптивного метода управления ДРК при различных скоростях набегающего потока} \label{sec:Allocation/SpeedTest}
 В рамках исследования было произведено сравнение двух методов: адаптивный метод управления ДРК предлагаемый в исследовании и метод прямого управления ДРК с линейным масштабированием (раздел \ref{sssec:AllocationFix}) адаптированный для различных вариаций скорости, который реализован на АНПА ``ММТ-300''.
 
-Для решения задачи адаптивного управления используется матрица коэффициентов влияния набегающего потока, которая, в соответствии с уравнением \ref{eq:flow_matrix} задана следующим образом:
+Для решения задачи адаптивного управления используется матрица коэффициентов влияния набегающего потока, которая, в соответствии с уравнением \ref{eq:flow_matrix}, задана следующим образом:
 \begin{equation*}
     K = 
     \begin{pNiceMatrix}[columns-width=auto]
@@ -777,8 +800,8 @@
 \end{equation*}
 
 \subsubsection{Методология проведения моделирования}
-Было осуществено моделирование управления ДРК при продольном движение аппарата с одновременным созданием момента по каналу дифферента.
-Вектор управления движением ПА $\vect{\nu}$ в BODY ССК выглядит следующим образом: $\vect{\nu_c} \equiv \vect{f}^b_c = [f_x, f_y, f_z, m_y, m_z]$, где $f_x,\: f_y,\: f_z$ -- соответственно, проекция целевой силы на продольную, поперечную и нормальную ось, а $m_y,\: m_z$ -- сответствующие проекции целевого момента.
+Было осуществено моделирование управления ДРК при продольном движении аппарата с одновременным созданием момента по каналу дифферента.
+Вектор целевого управления движением ПА $\vect{\nu_c}$ в BODY ССК выглядит следующим образом: $\vect{\nu_c} \equiv \vect{f}^b_c = [f_x, f_y, f_z, m_y, m_z]$, где $f_x,\: f_y,\: f_z$ -- соответственно, проекция целевой силы на продольную, поперечную и нормальную ось, а $m_y,\: m_z$ -- сответствующие проекции целевого момента.
 В моделируемом случае целевая сила определяется следующим выражением:
 
 \begin{equation*}
@@ -795,34 +818,38 @@
 
 Для моделирования были приняты следующие коэффициенты:
 \begin{itemize}
-    \item $c_x$ -- 37,0 Н $\cdot$ м/с;
-    \item $m_y^0$ -- 60,0 Нм;
+    \item $c_x$ -- 35,0 Н $\cdot$ м/с;
+    \item $m_y^0$ -- 40,0 Нм;
 \end{itemize}
+
+Результаты распределения упоров методом прямого управления ДРК с масштабированием в диапазоне скоростей от 0 до 2.5 м/с представлены на рисунке \ref{fig:mmt-300-allocation-fix-thrust}.
+В свою очередь на рисунке \ref{fig:mmt-300-allocation-fix-force} показаны целевые и фактические силы которые были при этом.
+Аналогичные данные для адаптивного метода управления ДРК представлены на рисунках \ref{fig:mmt-300-allocation-optimal-thrust} и \ref{fig:mmt-300-allocation-optimal-force} соответственно.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный упоры.png}
+    \includegraphics[width=0.8\linewidth]{allocation/Результат ММТ300 - Стандартный упоры.png}
     \caption{Распределение упоров методом прямого управления ДРК с масштабированием.}
     \label{fig:mmt-300-allocation-fix-thrust}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{allocation/Результат - Стандартный силы.png}
+    \includegraphics[width=0.8\linewidth]{allocation/Результат ММТ300 - Стандартный силы.png}
     \caption{Силы и моменты при прямом управлении с масштабированием.}
     \label{fig:mmt-300-allocation-fix-force}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный Упоры.png}
+    \includegraphics[width=0.8\linewidth]{allocation/Результат ММТ300 - Адаптивный Упоры.png}
     \caption{Распределение упоров адаптивным методом.}
     \label{fig:mmt-300-allocation-optimal-thrust}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.8\linewidth]{allocation/Результат - Адаптивный силы.png}
+    \includegraphics[width=0.8\linewidth]{allocation/Результат ММТ300 - Адаптивный силы.png}
     \caption{Силы и моменты при адаптивном методе.}
     \label{fig:mmt-300-allocation-optimal-force}
 \end{figure}
@@ -832,13 +859,13 @@
 Структура современных СУ АНПА разрабатываемых в ИПМТ ДВО РАН имеет модульный принцип построения \cite{борейко2019система, инзарцев2015реконфигурируемая}, т.е. представляет собой совокупность независимых функционально завершенных исполняемых файлов взаимодействие между которыми происходит заранее сформированными сообщениями.
 Взаимодействие между модулями обеспечивается системой передачи сообщений IPC, подробности работы которой описаны в статье \cite{pavin2016reconfigurable}.
 
-На рисунке \ref{fig:software_old} показано структурное описание текущей реализции СУ АНПА ДВО РАН.
-На схеме изображены следующие модули СУ:
+На рисунке \ref{fig:software_old} показано структурное описание текущей реализции СУ АНПА ДВО РАН в части управления движением.
+На рисунке изображены следующие модули СУ:
 \begin{itemize}
     \item ``Navigation'' -- модуль, комплексирующий навигационные данные от всех датчиков АНПА и публикующий самые лучшие данные в стандартном формате, где $\vect{p}^n_{b/n}$ -- положение АНПА в некоторой заданной инерциальной СК, $\vect{v}^n_{b/n}$ -- скорость АНПА в этой СК, а $\vect{v}^b_{b}$ -- скорость движения АНПА в ССК.
-    \item ``Mission'' -- модуль который обеспечивает стратегический уровень управления движием АНПА, т.е. он потребляет список заданных целевых координат в географической СК, вдоль которых последовательно должен пройти АНПА.
-    \item ``Tack'' -- совокупность модулей обеспечивающих тактическое управление, т.е. формирующие траекторное управдение движением АНПА между заданными географическими точками общего маршрута управления.
-    \item ``Motion'' -- модуль оперативного управления движением АНПА, который обеспечивает управление движением независимо по всем доступным осям на основе целевых параметров поставляемых модулем ``Tack'' и текущего положения АНПА в некоторой инерциальной СК. Так же этот модуль обеспечивает управление ДРК на основе швартовных характеристик исполняемых механизмов.
+    \item ``Mission'' -- модуль который обеспечивает стратегический уровень управления движием АНПА, т.е. он формирует список целевых координат в географической СК вдоль которых последовательно должен пройти АНПА и перечень устройств которые в данный момент времени должны быть активированы.
+    \item ``Tack'' -- совокупность модулей обеспечивающих тактическое управление, т.е. формирующие траекторное управление движением АНПА между заданными географическими точками общего маршрута движения.
+    \item ``Motion'' -- модуль оперативного управления движением АНПА, который обеспечивает управление движением независимо по всем доступным осям в некототорой локальной СК на основе целевых параметров поставляемых модулем ``Tack'' и текущего положения АНПА. Так же этот модуль обеспечивает управление ДРК на основе швартовных характеристик исполняемых механизмов.
 \end{itemize}
 
 \begin{figure}[ht]
@@ -854,6 +881,7 @@
 Модуль поставляет вектор команд управления отдельными исполнтельными элементами на вход соответствующих драйверов.
 Так же исходящим параметром модуля является скорость набегающего потока, т.е. скорость АНПА в ССК.
 При этом от модуля навигации он потребляет тот же вектор скорости, но в скомплексированном виде.
+Общая структурная схема модуля ``Propulsion'' представлена на рисунке \ref{fig:propulsion-diagram}.
 
 \begin{figure}[ht]
     \centering
@@ -862,11 +890,21 @@
     \label{fig:software_new}
 \end{figure}
 
-\section{Выводы по главе 4}
-\begin{noteplan}
-	Выводы что метод позоляет отказоустойчиво распределять управляющее воздействие с учетом подруливающих особенностей ДРК.
-\end{noteplan}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1.0\linewidth]{allocation/Алгоритм - Реализация propulsion.png}
+    \caption{Общая структурная схема модуля ``Propulsion''.}
+    \label{fig:propulsion-diagram}
+\end{figure}
 
-\begin{notequestion}
-	Надо как-то выйти на то, что используется скорость полученная в третьей главе. Или это уже в финальной главе обьединить?
-\end{notequestion}
+
+\section{Выводы по главе 4}
+Предложен новый алгоритм управления ДРК подводного аппарата, который учитывает особенности работы ИМ ДРК в набегающем потоке и способен адаптивно перераспределять управляющие воздействия при вариациях скорости.
+При этом поставщиком данных о скорости набегающего потока может быть сам ДРК ПА путем анализа параметров работы маршевых движителей по закономерностям которые были получены в главе \ref{ch:Velocity}.
+
+Показано что предложеное решение метода управления ДРК обеспечивает более высокую скорость работы по сравнению со стандартными подходами к решению задачи управления ДРК через формирование линейной и квадратичной оптимальной задачи при сопосповимой области допустимых значений.
+
+Показано что предлагаемый алгоритм адаптивного управления ДРК позволяет плавно выключать подруливающий движитель из управления движением ПА.
+По сравнению с используемым в АНПА ``ММТ-300'', предлагаемый метод позволяет обеспечивать более широкий диапазон управления и позволяет удерживать заданный момент при более высоких значениях целевой скорости.
+
+Показан механизм модификации модульной СУ АНПА ``ММТ-300'' для прикладной реализации алгоритма адаптивного управления ДРК с идентификацией набегающего потока по параметрам работы маршевых движителей.
