Исправлены результаты моделирования. Настроены весовые коэффициенты что бы задачи были более похожи.

--- a/Dissertation/partAllocation.tex
+++ b/Dissertation/partAllocation.tex
@@ -758,8 +758,9 @@
 В рамках исследования было произведено сравнение двух методов: адаптивный метод управления ДРК предлагаемый в исследовании и метод прямого управления ДРК с линейным масштабированием (раздел \ref{sssec:AllocationFix}) адаптированный для различных вариаций скорости, который реализован на АНПА ``ММТ-300''.
 
 Для решения задачи адаптивного управления используется матрица коэффициентов влияния набегающего потока, которая, в соответствии с уравнением \ref{eq:flow_matrix}, задана следующим образом:
-\begin{equation*}
-    K = 
+\begin{equation}
+    \label{eq:flow_matrix_test}
+    K(v) = 
     \begin{pNiceMatrix}[columns-width=auto]
        1 & 0 & 0 & 0 & 0 & 0 \\
        0 & 1 & 0 & 0 & 0 & 0 \\
@@ -768,7 +769,7 @@
        0 & 0 & 0 & 0 & e^{-c_{tv}\frac{v}{u_j}} & 0 \\
        0 & 0 & 0 & 0 & 0 &  e^{-c_{tv}\frac{v}{u_j}}\\
     \end{pNiceMatrix}
-\end{equation*}
+\end{equation}
 \noindent где $c_{tv}, c_{th}$ -- соответственно коэффициент подавления упора вертикального и горизонтального движителя.
 
 
@@ -821,6 +822,39 @@
     \item $c_x$ -- 35,0 Н $\cdot$ м/с;
     \item $m_y^0$ -- 40,0 Нм;
 \end{itemize}
+
+Весовые коэффициенты итерационной формулы поиска адаптивного управления ДРК \ref{eq:Allocation/FixedMethod} представлены в таблице \ref{tab:weight_coeff}.
+Численные параметры расчёта матрицы коэффициентов влияния набегающего потока \ref{eq:flow_matrix_test} представлены в таблице \ref{tab:matrix_flow_coeff}.
+
+\begin{table}
+    \caption{Весовые коэффициенты для адаптивного управления ДРК.}
+    \label{tab:weight_coeff}
+    \centering
+    \begin{tabular}{ll}
+        \toprule
+        Наименование & Величина \\
+        \midrule
+        $\epsilon$ & 0.8 \\
+        $Q_{\nu}$ & $\text{diag}([0,6;\:0,0;\:0,0;\:2,25;\:0,0])$ \\
+        $Q_{n}$  & $\text{diag}([0,4;\:0,4;\:0,4;\:0,4;\:0,4])$ \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+\begin{table}
+    \caption{Параметры расчёта матрицы $K(v)$.}
+    \label{tab:matrix_flow_coeff}
+    \centering
+    \begin{tabular}{lll}
+        \toprule
+        Описание & Обозначение & Величина \\
+        \midrule
+        Коэффициент подавления упора & $c$ & 2.0 \\
+        Диаметр винта & $D$ & 0.14 м \\
+        Плотность воды & $\rho$ & 1000 кг/м$^3$ \\
+        \bottomrule
+    \end{tabular}
+\end{table}
 
 Результаты распределения упоров методом прямого управления ДРК с масштабированием в диапазоне скоростей от 0 до 2.5 м/с представлены на рисунке \ref{fig:mmt-300-allocation-fix-thrust}.
 В свою очередь на рисунке \ref{fig:mmt-300-allocation-fix-force} показаны целевые и фактические силы которые были при этом.
