По ходу диссертации добавлены статьи по мотивам исследования.

--- a/Dissertation/partPropulsion.tex
+++ b/Dissertation/partPropulsion.tex
@@ -1,6 +1,6 @@
 \chapter{Математические модели исполнительных механизмов ДРК}\label{ch:Propulsion}
 
-Исполнительные механизмы ДРК определяют эффективность траекторного маневрирования НПА, а также возможность его динамического позиционирования в точке или зависания в толще воды.
+Исполнительные механизмы ДРК определяют эффективность траекторного маневрирования НПА, а также возможность его динамического позиционирования в точке или зависания в толще воды \cite{костенко2017оценка}.
 На практике используются различные конструктивные схемы ДРК, в состав которых могут входить маршевые и подруливающие движители, носовые и кормовые рулевые устройства.
 
 Наиболее распространенными типами движителей являются гребные винты в насадке и водометные движители, которые могут устанавливаться стационарно на корпусе аппарата или на поворотных кронштейнах, которые поворачиваются на требуемый угол в плоскости или пространстве для изменения направления действия силы тяги.
@@ -169,7 +169,7 @@
 При различных методах управления приводом, возможно представление его динамики в различной записи.
 
 \subsection{Методы управления приводом движителя ПА}
-Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, sorensen20003}.
+Анализ опыта разработки систем управления движением НПА и систем динамического позиционирования судов подтверждает наличие трех вариантов управления движителями: управление по моменту электропривода, управление по оборотам ГВ и управление по упору \cite{костенко2020исследование, костенко2019разработка, sorensen20003}.
 Структурные схемы вариантов управления приведены на рисунке \ref{fig:control_methods_schemes}
 
 \begin{figure}[ht]
@@ -234,7 +234,7 @@
 \noindent где $K_{tp}$ и $K_{ti}$, соответственно, пропорциональный и интегральный коэффициенты ПИ-регулятора.
 
 \section{Математическая модель подруливающих движителей ПА}
-Описание работы подруливающего движителя описывается существенно более сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата.
+Описание работы подруливающего движителя описывается существенно более сложнее по сравнению с маршевым движителем за счёт особенностей взаимодействия создаваемой подруливающим движителем пропульсивной струи с корпусом подводного аппарата \cite{tolstonogov2017auv}.
 Научные труды посвященные гидродинамическим особенностям работы подруливающих движителей в первую очередь были проведены в рамках исследования эффективности движительно-рулевых комплексов судов \cite{chislett1966influence, english1964design, brix1973lateral}.
 Кроме того, большое исследование данного вопроса было проведено в докторской диссертации \cite{nienhuis1992analysis}.
 Общий вывод представленных работ и результатов натурных экспериментов заключается в том, что работа подруливающих движителей тунельного типа становится неэффективной на скоростях движения судов свыше 1–1,5 м/с \cite{english63}.
