--- a/Dissertation/partStatement.tex
+++ b/Dissertation/partStatement.tex
@@ -69,12 +69,12 @@
 Отдельно стоит упомянуть случай при $k-n < 0$ для системы \ref{eq:dynamic_statespace}. Такой случай подразумевает, что исполнительных механизмов ДРК меньше чем размерность вектора состояния системы, такие системы можно назвать дефицитными (under-actuated system), а соответствующие ей матрица $B_u$ является переопределённой или плохо обусловленной. В этом случае задача управления ДРК тесно связана с системой управления движением ПА, и её сложно сформулировать обособленно. Отдельные примеры решения этой задачи для различных типов АНПА представлены в литературе \cite{10.1049/iet-cta.2009.0265, 10.1109/cdc.2002.1184546}.
 
 \section{Методы решения задачи управления ДРК}\label{sec:Statement/Methods}
-Существует достаточно много подходов к постановке и решению задачи управления ДРК.
+Существует достаточно много подходов к постановке и решению задачи управления ДРК \cite{костенко2020методы}.
 В рамках данного обзора они разделены на две большие группы.
 В первую группу отнесены те задачи, в которых вектор виртуального управления пропорционален вектору управления ИМ, то есть $\vect{\nu}(t) = B \vect{u}(t)$, и это допущение было сделано в формулировке задачи управления ДРК. Но в то же время существует отдельная группа систем, где это допущение не может быть принято.
 \subsection{Линейные системы исполнительных механизмов ДРК}
 
-В подавляющем большинстве случаев к этой группе относят практически все телеуправляемые необитаемые подводные аппараты (ТНПА) с фиксированными движителями, а также большая часть АНПА оснащенных фиксированными движителями и/или рулями управления.
+В подавляющем большинстве случаев к этой группе относят практически все телеуправляемые необитаемые подводные аппараты (ТНПА) с фиксированными движителями, а также большая часть АНПА оснащенных фиксированными движителями и/или рулями управления \cite{костенко2017разработка, костенко2019задача}.
 В статье \cite{yuh2000design} представлен обзор различных АНПА разработанных до 2000-го года за рубежом.
 Большинство представленных аппаратов оснащено одним или двумя маршевыми движителями, которые работают совместно с рулями управления.
 К этой группе также могут быть отнесены такие аппараты как «МТ-2010» \cite{борейко2011малогабаритный}, «ММТ-3000» \cite{горнак2007ммт} и другие аппараты разработанные в Институте проблем морских технологий ДВО РАН.
