--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -32,3 +32,87 @@
   language = {russian},
   authorconf = {true}
 }
+
+@article{костенко2020методы,
+  addendum = {(0,10~п.~л.; ВАК)},
+  title={Методы решения задачи распределения управляющих воздействий на исполнительные механизмы подводного аппарата: краткий обзор},
+  author={Костенко, ВВ and Толстоногов, АЮ},
+  journal={подводные иссленые исследования подводные исследования},
+  pages={4},
+  year={2020},
+  language = {russian},
+  authorvak = {true}
+}
+
+@article{костенко2019разработка,
+  title={Разработка и исследование математической модели маршевого движителя необитаемого подводного аппарата},
+  author={Костенко, ВВ and Михайлов, ДН and Стороженко, ВА and Толстоногов, АЮ},
+  journal={Технические проблемы освоения Мирового океана},
+  number={8},
+  pages={352--358},
+  year={2019},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language = {russian},
+  authorconf = {true}
+}
+
+@article{костенко2019особенности,
+  title={Особенности моделирования пространственного движения многофункционального АНПА с избыточным движительно-рулевым комплексом},
+  author={Костенко, ВВ and Медведев, АВ and Мокеева, ИГ and Толстоногов, АЮ},
+  journal={Технические проблемы освоения Мирового океана},
+  number={8},
+  pages={74--79},
+  year={2019},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language = {russian},
+  authorconf = {true}
+}
+
+@article{tolstonogov2017auv,
+  addendum = {(0,10~п.~л.; Scopus)},
+  title={AUV Thrust Allocation with Variable Constraints},
+  author={Tolstonogov, Anton Yu and Kostenko, Vladimir V},
+  journal={Advances in Systems Science and Applications},
+  volume={17},
+  number={3},
+  pages={1--8},
+  year={2017},
+  language = {english},
+  authorvak = {true}
+}
+
+@article{костенко2017разработка,
+  title={Разработка алгоритмов распределения команд управления движением в движительно-рулевом комплексе подводного робота},
+  author={Костенко, ВВ and Толстоногов, АЮ},
+  journal={Технические проблемы освоения Мирового океана},
+  volume={7},
+  pages={331--335},
+  year={2017},
+  publisher={Федеральное государственное бюджетное учреждение науки Институт проблем~…},
+  language = {russian},
+  authorconf = {true}
+}
+
+@article{костенко2017оценка,
+  addendum = {(0,10~п.~л.; ВАК)},
+  title={Оценка требований к гребному электроприводу автономного необитаемого подводного аппарата},
+  author={Костенко, Владимир Владимирович and Михайлов, Денис Николаевич and Нечаев, Виталий Дмиитриевич and Толстоногов, Антон Юрьевич},
+  journal={Известия Южного федерального университета. Технические науки},
+  number={1 (186)},
+  year={2017},
+  publisher={Федеральное государственное автономное образовательное учреждение высшего~…},
+  language = {russian},
+  authorvak = {true}
+}
+
+@article{костенко2019задача,
+  addendum = {(0,10~п.~л.; ВАК)},
+  title={Задача декомпозиции управления движением АНПА с учетом изменяющихся ограничений маршевых движителей},
+  author={Костенко, Владимир Владимирович and Толстоногов, Антон Юрьевич},
+  journal={Известия Южного федерального университета. Технические науки},
+  number={1 (203)},
+  year={2019},
+  publisher={Федеральное государственное автономное образовательное учреждение высшего~…},
+  language = {russian},
+  authorvak = {true}
+}
